fixed footer on wide desktops, re-aligned bio on tablet

--- a/assets/css/_desktopView.scss
+++ b/assets/css/_desktopView.scss
@@ -39,7 +39,7 @@
       // float: right;
       position: absolute;
       right: 2%;
-      top: 10%;
+      top: 5%;
       a {
         color: white;
         margin: 0 10px;
@@ -204,20 +204,24 @@
 
   #about {
     margin: 0 0 5% 0;
-    // border: solid 2px red;
+    border: solid 2px red;
   }
 
   #contact {
     height: 300px;
     background-color: $navy2;
     font-family: $font;
+    padding: 5% 0 0 0;
     #contact-wrap {
+      text-align: center;
       vertical-align: middle;
+      width: 70%;
+      margin: 0 15%;
       div {
         padding: 2%;
-        text-align: center;
         font-size: 1em;
         color: white;
+        display: inline-block;
         a {
           text-decoration: none;
           color: white;
@@ -226,9 +230,13 @@
           text-decoration: underline;
         }
       }
+      span {
+        color: gray;
+      }
       #copyright {
         margin-top: 2%;
         font-size: 0.8em;
+        display: block;
       }
     }
   }
